styles.css
#canvas-wrapper {
  position: absolute;
  top: 50px;
  left: 100px;
}

#title {
  padding-top: 20px;
}

#labelList button {
  display: block;
}

.dropdown {
  position: relative;
  display: inline-block;
}

.dropdown-content {
  display: none;
  position: absolute;
  background-color: #f1f1f1;
  min-width: 160px;
  overflow: auto;
  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
  z-index: 1;
}

.dropdown-content a {
  color: black;
  padding: 12px 16px;
  text-decoration: none;
  display: block;
}

a:hover {
  cursor: default;
  background-color: blue;
}

.show {display: block;}

